# coreclr

./: build-test.cmd  configurecompiler.cmake
src/debug/di/: process.cpp
src/dlls/mscorrc/small/: CMakeLists.txt
src/inc/: appxutil.h  ex.h  holder.h  utilcode.h  volatile.h
src/pal/tools/: gen-buildsys.cmd
src/strongname/inc/: strongnameholders.h
src/vm/: clrprivbinderwinrt.cpp  comcallablewrapper.cpp  comcallablewrapper.h  commtmemberinfomap.cpp  commtmemberinfomap.h  comtoclrcall.cpp  comtoclrcall.h  dllimport.cpp  dllimport.h  fieldmarshaler.cpp  fieldmarshaler.h  ilmarshalers.cpp  ilmarshalers.h  interoputil.cpp  marshalnative.cpp  methodtablebuilder.cpp  mlinfo.cpp  mlinfo.h  pefile.cpp  vmholder.h  wrappers.h
tests/: CMakeLists.txt  dumpbundledruntimeversion.proj
tests/src/Interop/: CMakeLists.txt
tests/src/Interop/IJW/: IJW.cmake
tests/src/Interop/IJW/CopyConstructorMarshaler/: CMakeLists.txt  CopyConstructorMarshaler.cs
tests/src/Interop/IJW/FixupCallsHostWhenLoaded/: FixupCallsHostWhenLoaded.cs
tests/src/Interop/IJW/IjwNativeCallingManagedDll/: CMakeLists.txt
tests/src/Interop/IJW/IjwNativeDll/: CMakeLists.txt
tests/src/Interop/IJW/LoadIjwFromModuleHandle/: LoadIjwFromModuleHandle.cs
tests/src/Interop/IJW/ManagedCallingNative/: ManagedCallingNative.cs
tests/src/Interop/IJW/NativeCallingManaged/: NativeCallingManaged.cs
tests/src/Interop/IJW/NativeVarargs/: CMakeLists.txt  IjwNativeVarargs.cpp
tests/src/Interop/IJW/ijwhostmock/: CMakeLists.txt
tests/src/Interop/StringMarshalling/UTF8/: UTF8TestNative.cpp
(+1 files in other folders)
